added comment for optimizations